# CSCD437_CodeVulnerabilities

./: CMakeLists.txt  a.c  sonar-project.properties
.PVS-Studio/: compile_commands.json  config.cfg
